--- a/index.html
+++ b/index.html
@@ -6,11 +6,54 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Creation de Page</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div style="text-align: center">
+             <h1 style="color: #ff3333">
+                Création de sites internet
+            </h1>
+             <p style="font-family: verdana ; font-size: 150%">
+                Voici un premier paragraphe
+            </p>
+            <img src="logo_psg.jpg" alt="Image du PSG" style="width: 25%"/>
+            <a href="https://touchard-washington.paysdelaloire.e-lyco.fr">Lien vers le lycée</a>
+            <table style="border: 1px black solid; width: 25%; border-collapse: collapse">
+                <caption>Légende Ronaldo</caption>
+                <tr>
+                    <th style="border: 1px black solid; width: 25%">En-tête 1</th>
+                    <th style="border: 1px black solid; width: 25%">En-tête 2</th>
+                    <th style="border: 1px black solid; width: 25%">En-tête 3</th>
+                </tr>
+                <tr>
+                    <td style="border: 1px black solid">case 1</td>
+                    <td style="border: 1px black solid">case 2</td>
+                    <td style="border: 1px black solid">case 3</td>
+                </tr>
+                <tr>
+                    <td style="border: 1px black solid">case 4</td>
+                    <td style="border: 1px black solid">case 5</td>
+                    <td style="border: 1px black solid">case 6</td>
+                </tr>
+            </table>
+            <ol style="list-style-type: upper-roman">
+                <li>Premier point</li>
+                <li>Deuxieme point</li>
+                <li>Troisième point</li>
+            </ol>
+            <ul>
+                <li>Premier point
+                    <ul>
+                        <li>Premier sous point</li>
+                        <li>Deuxieme sous point</li>
+                        <li>Troisième sous point</li>
+                    </ul>
+                </li>
+                <li>Deuxieme point</li>
+                <li>Troisieme point</li>
+            </ul>
+        </div>
     </body>
 </html>
